Added Terraform integration

--- a/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
+++ b/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
@@ -6,3 +6,5 @@ ExecuteWorkflowBuildStep.DescriptorImpl.displayName=Execute Cloudify Workflow
 OutputsToInputsBuildStep.DescriptorImpl.displayName=Convert Cloudify Environment Outputs/Capabilities to Inputs
 UploadBlueprintBuildStep.DescriptorImpl.displayName=Upload Cloudify Blueprint
 UploadPluginBuildstep.DescriptorImpl.displayName=Upload Cloudify Plugin
+
+TerraformBuildStep.DescriptorImpl.displayName=Apply Terraform Module
