--- a/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
+++ b/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
@@ -8,3 +8,4 @@ UploadBlueprintBuildStep.DescriptorImpl.displayName=Upload Cloudify Blueprint
 UploadPluginBuildstep.DescriptorImpl.displayName=Upload Cloudify Plugin
 
 TerraformBuildStep.DescriptorImpl.displayName=Apply Terraform Module
+CloudFormationBuildStep.DescriptorImpl.displayName=Create CloudFormation Stack
