--- a/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
+++ b/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
@@ -1,5 +1,5 @@
 CreateEnvironmentBuildStep.DescriptorImpl.displayName=Create Cloudify Environment
-CloudifyBuildWrapper.DescriptorImpl.displayName=CloudifyEnvironment
+CloudifyBuildWrapper.DescriptorImpl.displayName=Cloudify Environment
 DeleteBlueprintBuildStep.DescriptorImpl.displayName=Delete Cloudify Blueprint
 DeleteEnvironmentBuildStep.DescriptorImpl.displayName=Delete Cloudify Environment
 ExecuteWorkflowBuildStep.DescriptorImpl.displayName=Execute Cloudify Workflow
@@ -9,3 +9,4 @@ UploadPluginBuildstep.DescriptorImpl.displayName=Upload Cloudify Plugin
 
 TerraformBuildStep.DescriptorImpl.displayName=Apply Terraform Module
 CloudFormationBuildStep.DescriptorImpl.displayName=Create CloudFormation Stack
+ARMBuildStep.DescriptorImpl.displayName=Create Azure ARM Deployment
