--- a/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
+++ b/src/main/resources/co/cloudify/jenkins/plugin/Messages.properties
@@ -10,3 +10,4 @@ UploadPluginBuildstep.DescriptorImpl.displayName=Upload Cloudify Plugin
 TerraformBuildStep.DescriptorImpl.displayName=Apply Terraform Module
 CloudFormationBuildStep.DescriptorImpl.displayName=Create CloudFormation Stack
 ARMBuildStep.DescriptorImpl.displayName=Create Azure ARM Deployment
+AnsibleBuildStep.DescriptorImpl.displayName=Run Ansible Playbook
